--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,3 @@
-
-
-
 $blue: #4831d4;
 $green: #ccf381;
 $lightgray: #f7f7f7;
@@ -12,3 +9,87 @@ $fontFamily: 'Roboto', sans-serif;
 $padding: 100px 0;
 $boxShadow: 0 0 10px #b7b6b6;
 $textShadow: 0 0 2px #333;
+
+//basic styles
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: $fontFamily;
+  font-size: $font;
+  color: $gray;
+  line-height: 1.6;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: 900;
+}
+
+a {
+  transition: $transition;
+  text-decoration: none;
+  color: $gray;
+  &:hover {
+    color: $green;
+  }
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
+}
+
+//top bar
+
+.topbar {
+  background: $lightgray;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 50px;
+  a {
+    &:hover {
+      color: $blue;
+    }
+  }
+}
+
+//nav bar
+nav {
+  display: flex;
+  padding: 15px 50px;
+  border-bottom: 4px solid $green;
+  align-items: center;
+  flex-wrap: wrap;
+  .logo {
+    flex: 3;
+    color: $gray;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    span {
+      color: $green;
+      font-style: italic;
+      text-shadow: $textShadow;
+    }
+  }
+  ul {
+    flex: 6;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .icons {
+    flex: 3;
+    display: flex;
+    justify-content: flex-end;
+    a {
+      margin-left: 20px;
+    }
+  }
+
+}
