--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,3 +93,52 @@ nav {
   }
 
 }
+
+//footer
+
+footer {
+  padding: $padding;
+  background: $blue;
+  color: $white;
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    .col {
+      flex:1;
+      h3 {
+        font-size: 1.7rem;
+        padding-bottom: 40px;
+      }
+      ul {
+        line-height: 2;
+        a {
+          color: $green;
+          &:hover {
+            color: $white;
+          }
+        }
+      }
+      p {
+        margin-bottom: 10px;
+      }
+      input[type="email"] {
+        padding: 12px;
+      }
+      input[type="submit"] {
+        padding: 8px;
+        background: $green;
+        border: none;
+        position: relative;
+        left: -20px;
+      }
+    }
+  }
+}
+// Bottom Bar
+.bottomBar {
+  @extend .topbar;
+  background: $green;
+  a {
+    margin-left: 20px;
+  }
+}
