--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+// variables
 $blue: #4831d4;
 $green: #ccf381;
 $lightgray: #f7f7f7;
@@ -9,7 +10,24 @@ $fontFamily: 'Roboto', sans-serif;
 $padding: 100px 0;
 $boxShadow: 0 0 10px #b7b6b6;
 $textShadow: 0 0 2px #333;
+// mixins
+@mixin btn {
+  padding: 20px;
+  text-transform: uppercase;
+  margin-top: 15px;
+  background: $green;
+  border: none;
+  color: $gray;
+  font-size: 1.1rem;
+  &:hover {
+    cursor: pointer;
+    background: $blue;
+    color: $white;
+    $transition: $transition;
 
+  }
+
+}
 //basic styles
 
 * {
@@ -44,6 +62,19 @@ ul {
 .container {
   width: 80%;
   margin: auto;
+}
+
+.headings {
+  font-size: 3rem;
+  text-align: center;
+  &:after {
+    display: block;
+    content: "";
+    height: 2px;
+    width: 200px;
+    margin: 20px auto 40px auto;
+    background: $green;
+  }
 }
 
 //top bar
@@ -140,5 +171,66 @@ footer {
   background: $green;
   a {
     margin-left: 20px;
+  }
+}
+
+//header
+header {
+  background-image: url("../img/header.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 50px;
+  h4 {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+  }
+  h2 {
+    font-size: 4rem;
+    line-height: 1.2;
+    color: $green;
+    letter-spacing: 2px;
+    span {
+      color: $white;
+    }
+
+  }
+  button {
+    @include btn;
+  }
+
+}
+// featured product
+
+.featuredProduct {
+  padding: $padding;
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .col {
+      flex: 0 0 31%;
+      box-shadow: $boxShadow;
+      img {
+        width: 100%;
+      }
+      h3 {
+        font-size: 1.8rem;
+        padding-left: 20px;
+      }
+      .price {
+        padding: 20px;
+        display: flex;
+        p:first-child {
+          margin-right: 30px;
+          text-decoration: line-through;
+          color: blue;
+        }
+      }
+    }
   }
 }
