--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ ul {
   font-size: 3rem;
   text-align: center;
 }
+@media (max-width: 768px) {
+  .headings {
+    font-size: 2rem;
+  }
+}
 .headings:after {
   display: block;
   content: "";
@@ -64,6 +69,11 @@ ul {
   justify-content: space-between;
   padding: 5px 50px;
 }
+@media (max-width: 768px) {
+  .topbar, .bottomBar {
+    display: none;
+  }
+}
 .topbar a:hover, .bottomBar a:hover {
   color: #4831d4;
 }
@@ -74,6 +84,11 @@ nav {
   border-bottom: 4px solid #ccf381;
   align-items: center;
   flex-wrap: wrap;
+}
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+  }
 }
 nav .logo {
   flex: 3;
@@ -91,6 +106,11 @@ nav ul {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width: 768px) {
+  nav ul li {
+    margin: 5px 10px;
+  }
+}
 nav .icons {
   flex: 3;
   display: flex;
@@ -98,6 +118,11 @@ nav .icons {
 }
 nav .icons a {
   margin-left: 20px;
+}
+@media (max-width: 768px) {
+  nav .icons a {
+    margin: 10px;
+  }
 }
 
 footer {
@@ -111,6 +136,12 @@ footer .container {
 }
 footer .container .col {
   flex: 1;
+}
+@media (max-width: 768px) {
+  footer .container .col {
+    flex: 0 0 100%;
+    margin-bottom: 30px;
+  }
 }
 footer .container .col h3 {
   font-size: 1.7rem;
@@ -157,6 +188,11 @@ header {
   align-items: flex-start;
   padding-left: 50px;
 }
+@media (max-width: 768px) {
+  header {
+    height: 80vh;
+  }
+}
 header h4 {
   text-transform: uppercase;
   font-size: 1.4rem;
@@ -197,6 +233,12 @@ header button:hover {
   flex: 0 0 31%;
   box-shadow: 0 0 10px #b7b6b6;
 }
+@media (max-width: 768px) {
+  .featuredProduct .row .col {
+    flex: 0 0 100%;
+    margin-bottom: 30px;
+  }
+}
 .featuredProduct .row .col img {
   width: 100%;
 }
@@ -226,6 +268,12 @@ header button:hover {
   border: 1px solid #333;
   box-shadow: 0 0 10px #b7b6b6;
   padding: 30px;
+}
+@media (max-width: 768px) {
+  .security .col {
+    flex: 0 0 100%;
+    margin-bottom: 30px;
+  }
 }
 .security .col i {
   color: #ccf381;
@@ -257,8 +305,18 @@ header button:hover {
   font-weight: 300;
   font-size: 2rem;
 }
+@media (max-width: 768px) {
+  .offer .container h4 {
+    text-align: right;
+  }
+}
 .offer .container h2 {
   font-size: 6rem;
+}
+@media (max-width: 768px) {
+  .offer .container h2 {
+    font-size: 3rem;
+  }
 }
 .offer .container button {
   padding: 20px;
@@ -274,6 +332,80 @@ header button:hover {
   cursor: pointer;
   background: #4831d4;
   color: #fff;
+}
+
+.products {
+  padding: 100px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.products article {
+  flex: 1;
+}
+@media (max-width: 768px) {
+  .products article {
+    flex: 0 0 100%;
+  }
+}
+.products article img {
+  width: 100%;
+}
+.products aside {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 50px;
+}
+@media (max-width: 768px) {
+  .products aside {
+    padding-left: 0;
+    flex: 0 0 100%;
+  }
+}
+.products aside h3 {
+  font-size: 3rem;
+}
+.products aside h4 {
+  font-size: 1.8rem;
+  color: #ccf381;
+  text-shadow: 0 0 2px #333;
+}
+.products aside p {
+  padding: 10px 0;
+}
+.products aside hr {
+  margin: 10px 0;
+}
+.products aside button {
+  padding: 20px;
+  text-transform: uppercase;
+  margin-top: 15px;
+  background: #ccf381;
+  border: none;
+  color: #333;
+  font-size: 1.1rem;
+}
+.products aside button:hover {
+  cursor: pointer;
+  background: #4831d4;
+  color: #fff;
+}
+.products aside i {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  background: #f7f7f7;
+  border: 1px solid #333;
+  font-size: 1.2rem;
+  margin: 0 10px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .products aside i {
+    margin: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
