--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,9 @@ ul {
 .headings {
   font-size: 3rem;
   text-align: center;
+  @media(max-width: 768px) {
+    font-size: 2rem;
+  }
   &:after {
     display: block;
     content: "";
@@ -97,6 +100,9 @@ ul {
   display: flex;
   justify-content: space-between;
   padding: 5px 50px;
+  @media(max-width: 768px) {
+    display: none;
+  }
   a {
     &:hover {
       color: $blue;
@@ -111,6 +117,9 @@ nav {
   border-bottom: 4px solid $green;
   align-items: center;
   flex-wrap: wrap;
+  @media(max-width: 768px) {
+    flex-direction: column;
+  }
   .logo {
     flex: 3;
     color: $gray;
@@ -126,6 +135,12 @@ nav {
     flex: 6;
     display: flex;
     justify-content: space-evenly;
+    li {
+      @media(max-width: 768px) {
+        margin: 5px 10px;
+      }
+    }
+
   }
   .icons {
     flex: 3;
@@ -133,6 +148,9 @@ nav {
     justify-content: flex-end;
     a {
       margin-left: 20px;
+      @media(max-width: 768px) {
+        margin: 10px;
+      }
     }
   }
 
@@ -149,6 +167,10 @@ footer {
     flex-wrap: wrap;
     .col {
       flex:1;
+      @media(max-width: 768px) {
+        flex: 0 0 100%;
+        margin-bottom: 30px;
+      }
       h3 {
         font-size: 1.7rem;
         padding-bottom: 40px;
@@ -198,6 +220,9 @@ header {
   justify-content: center;
   align-items: flex-start;
   padding-left: 50px;
+  @media(max-width: 768px) {
+    height: 80vh;
+  }
   h4 {
     text-transform: uppercase;
     font-size: 1.4rem;
@@ -228,6 +253,10 @@ header {
     .col {
       flex: 0 0 31%;
       box-shadow: $boxShadow;
+      @media(max-width: 768px) {
+        flex: 0 0 100%;
+        margin-bottom: 30px;
+      }
       img {
         width: 100%;
       }
@@ -261,6 +290,10 @@ header {
     border: 1px solid $gray;
     box-shadow: $boxShadow;
     padding: 30px;
+    @media(max-width: 768px) {
+      flex: 0 0 100%;
+      margin-bottom: 30px;
+    }
     i {
       color: $green;
       text-shadow: $textShadow;
@@ -291,13 +324,76 @@ header {
       text-transform: uppercase;
       font-weight: 300;
       font-size: 2rem;
+      @media(max-width: 768px) {
+        text-align: right;
+      }
     }
     h2 {
       font-size: 6rem;
+      @media(max-width: 768px) {
+        font-size: 3rem;
+      }
     }
     button {
       @include btn;
       margin-bottom: 30px;
+    }
+  }
+}
+//products
+.products {
+  padding: $padding;
+  display: flex;
+  flex-wrap: wrap;
+  article {
+    flex: 1;
+    @media(max-width: 768px) {
+      flex: 0 0 100%;
+    }
+    img {
+      width: 100%;
+    }
+  }
+  aside {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 50px;
+    @media(max-width: 768px) {
+      padding-left: 0;
+      flex: 0 0 100%;
+    }
+    h3 {
+      font-size: 3rem;
+    }
+    h4 {
+      font-size: 1.8rem;
+      color: $green;
+      text-shadow: $textShadow;
+    }
+    p {
+      padding: 10px 0;
+    }
+    hr {
+      margin: 10px 0;
+    }
+    button {
+      @include btn;
+    }
+    i {
+      display: inline-block;
+      width: 60px;
+      height: 60px;
+      line-height: 60px;
+      background: $lightgray;
+      border: 1px solid $gray;
+      font-size: 1.2rem;
+      margin: 0 10px;
+      text-align: center;
+      @media(max-width: 768px) {
+        margin: 0;
+      }
     }
   }
 }
